--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,14 @@ members = [
     "src/iris_backend"
 ]
 resolver = "2"
+
+[workspace.dependencies]
+candid = "0.10"
+ic-cdk = "0.17"
+ic-cdk-macros = "0.17"
+serde = { version = "1.0", features = ["derive"] }
+hex = "0.4"
+sha2 = "0.10"
+ripemd = "0.1"
+bs58 = "0.4"
+urlencoding = "2.1"
