--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "scripts": {
         "start": "npm start --workspaces --if-present",
         "prebuild": "npm run prebuild --workspaces --if-present",
-        "build": "npm run build --workspaces --if-present",
-        "pretest": "npm run prebuild --workspaces --if-present",
-        "test": "npm test --workspaces --if-present"
+        "build": "npm run build --workspaces --if-present"
     },
     "engines": {
         "node": ">=16.0.0",
         "npm": ">=7.0.0"
     },
-    "workspaces": [ ]
+    "workspaces": [
+        "src/iris_frontend"
+    ]
 }
