--- a/src/iris_frontend/package.json
+++ b/src/iris_frontend/package.json
@@ -1,10 +1,33 @@
 {
     "name": "iris_frontend",
     "version": "0.1.0",
+    "private": true,
     "scripts": {
-        "start": "echo 'Frontend start'",
-        "prebuild": "echo 'Frontend prebuild'",
-        "build": "echo 'Frontend build completed'"
+        "start": "webpack serve --mode development --env development",
+        "build": "webpack --mode production --env production",
+        "prebuild": "npm run copy:types",
+        "copy:types": "rsync -avr ../../.dfx/local/canisters/iris_backend/ src/declarations/"
     },
-    "devDependencies": {}
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.3.23",
+        "@types/react-dom": "^18.3.7",
+        "assert": "^2.1.0",
+        "buffer": "^6.0.3",
+        "css-loader": "^7.1.2",
+        "events": "^3.3.0",
+        "html-webpack-plugin": "^5.6.3",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
+        "style-loader": "^4.0.0",
+        "ts-loader": "^9.5.2",
+        "typescript": "^5.0.0",
+        "util": "^0.12.5",
+        "webpack": "^5.100.2",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.2"
+    }
 }
