fix: update .gitignore to include additional environment and OS files

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,30 @@ dist/
 
 # environment variables
 .env
+
+deps/
+.dfx/
+
+# DFX dependencies
+deps/
+.dfx/
+
+# Internet Identity clone (jika ada)
+internet-identity/
+
+# Environment files
+.env
+
+# Build outputs
+dist/
+node_modules/
+target/
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
