--- a/src/iris_frontend/package.json
+++ b/src/iris_frontend/package.json
@@ -14,19 +14,26 @@
         "@dfinity/candid": "^2.0.0",
         "@dfinity/principal": "^2.0.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.26.2"
     },
     "devDependencies": {
         "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.7",
         "assert": "^2.1.0",
+        "autoprefixer": "^10.4.20",
         "buffer": "^6.0.3",
         "crypto-browserify": "^3.12.1",
+        "css-loader": "^7.1.2",
         "dotenv": "^17.2.0",
         "events": "^3.3.0",
         "html-webpack-plugin": "^5.6.3",
+        "postcss": "^8.4.49",
+        "postcss-loader": "^8.1.1",
         "process": "^0.11.10",
         "stream-browserify": "^3.0.0",
+        "style-loader": "^4.0.0",
+        "tailwindcss": "^3.4.16",
         "ts-loader": "^9.5.2",
         "typescript": "^5.0.0",
         "util": "^0.12.5",
