--- a/src/iris_frontend/package.json
+++ b/src/iris_frontend/package.json
@@ -6,7 +6,8 @@
         "start": "webpack serve --mode development --env development",
         "build": "webpack --mode production --env production",
         "prebuild": "npm run copy:types",
-        "copy:types": "rsync -avr --exclude=\"index.js\" ../../.dfx/local/canisters/iris_backend/ src/declarations/"
+        "copy:types": "rsync -avr --exclude=\"index.js\" ../../.dfx/local/canisters/iris_backend/ src/declarations/",
+        "generate": "dfx generate iris_backend"
     },
     "dependencies": {
         "@dfinity/agent": "^2.0.0",
