--- a/src/iris_frontend/package.json
+++ b/src/iris_frontend/package.json
@@ -14,6 +14,7 @@
         "@dfinity/auth-client": "^2.0.0",
         "@dfinity/candid": "^2.0.0",
         "@dfinity/principal": "^2.0.0",
+        "lucide-react": "^0.525.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.26.2"
@@ -24,6 +25,7 @@
         "assert": "^2.1.0",
         "autoprefixer": "^10.4.20",
         "buffer": "^6.0.3",
+        "copy-webpack-plugin": "^13.0.0",
         "crypto-browserify": "^3.12.1",
         "css-loader": "^7.1.2",
         "dotenv": "^17.2.0",
