refactor: enhanced ui for login page

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     },
     "workspaces": [
         "src/iris_frontend"
-    ]
+    ],
+    "devDependencies": {
+        "copy-webpack-plugin": "^13.0.0"
+    }
 }
