--- a/src/iris_frontend/package.json
+++ b/src/iris_frontend/package.json
@@ -14,6 +14,7 @@
         "@dfinity/auth-client": "^2.0.0",
         "@dfinity/candid": "^2.0.0",
         "@dfinity/principal": "^2.0.0",
+        "@yudiel/react-qr-scanner": "^2.3.1",
         "lucide-react": "^0.525.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
