--- a/src/iris_frontend/package.json
+++ b/src/iris_frontend/package.json
@@ -16,11 +16,13 @@
         "@dfinity/principal": "^2.0.0",
         "@yudiel/react-qr-scanner": "^2.3.1",
         "lucide-react": "^0.525.0",
+        "qrcode": "^1.5.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.26.2"
     },
     "devDependencies": {
+        "@types/qrcode": "^1.5.5",
         "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.7",
         "assert": "^2.1.0",
